manifests/argocd/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: omnicloud
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      hostname: argocd.omnilium.local
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: argocd-tls
